--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
 
-<div class="container">
+<!-- <div class="container">
     <h1 class="text-center text-danger">{{title}}</h1>
     <br/>
     <br/>
      <router-outlet></router-outlet> 
-</div>
+</div> -->
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+        <app-producer></app-producer>
+    </div>
+    <div class="col-md-6">
+        <app-consumer></app-consumer>
+    </div>
+  </div>
+</div>
 
