--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-        <app-producer></app-producer>
+        <app-invoice></app-invoice>
     </div>
     <div class="col-md-6">
-        <app-consumer></app-consumer>
+        <app-invoice-edit></app-invoice-edit>
     </div>
   </div>
 </div>
+
+
 
